use DCChart define charts

--- a/crossfilter.html
+++ b/crossfilter.html
@@ -1,50 +1,57 @@
 {% macro require_js() -%}
-console.log("start");
 require.config({paths: {{require_urls}} });
-console.log("setting");
 
 require(["d3", "crossfilter", "dc"], function(d3, ignore, dc) {
-    console.log(d3);
-    console.log(crossfilter);
-    console.log(dc);
     {{ caller() }}
 });
 {%- endmacro %}
 
 {% macro render_charts() -%}
+
+    var iso = d3.time.format.utc("%Y-%m-%dT%H:%M:%S.%LZ");
+    df.forEach(function (d) {
+        {% for col in filter.datetime_columns %}
+        d["{{col}}"] = iso.parse(d["{{col}}"]);
+        {% endfor %}
+    });
+
     var ndx = crossfilter(df);
     var all = ndx.groupAll();
 
-
-    {% for i, col in filter.itercolumns() %}
-    var chart_{{i}}  = dc.{{filter.col_chart(i)}}("#chart-{{i}}-{{filter.timestamp}}");
+    {% for i, chart in filter.enumerate_charts() %}
+    var chart_{{i}}  = dc.{{chart.type}}("#chart-{{i}}-{{filter.timestamp}}");
     {% endfor %}
 
     dim_index = ndx.dimension(function(d){return d["_I"];});
-    {% for i, col in filter.itercolumns() %}
-    var dim_col{{i}} = ndx.dimension(function(d){return {{filter.dimension(i)}};});
+
+    {% for i, chart in filter.enumerate_charts() %}
+    var dim_col{{i}} = ndx.dimension(function(d){ {{chart.dimension}}; });
     var grp_col{{i}} = dim_col{{i}}.group().reduceCount();
     {% endfor %}
 
-    {% for i, col in filter.itercolumns() %}
+    {% for i, chart in filter.enumerate_charts() %}
           chart_{{i}}
-            .width({{filter.col_width(i)}}).height({{filter.col_height(i)}})
+            .width({{chart.width}}).height({{chart.height}})
             .dimension(dim_col{{i}})
             .group(grp_col{{i}});
 
-          {% if filter.col_chart(i) == "barChart" %}
-            chart_{{i}}.xUnits(function(){return {{filter.col_bin_count(i) + 2}};})
+          {% if chart.type == "barChart" %}
+            chart_{{i}}.xUnits(function(){return {{chart.bins + 2}};})
             .centerBar(true)
-            .x(d3.scale.linear().domain([{{filter.col_min(i) - filter.col_scale(i)}}, {{filter.col_max(i) + filter.col_scale(i)}}]))
+            .x(d3.scale.linear().domain([{{chart.min - chart.scale}}, {{chart.max + chart.scale}}]))
             .elasticY(true);
           {% endif %}
 
-          {% if filter.col_chart(i) in ("barChart", "rowChart") %}
+          {% if chart.type in ("barChart", "rowChart") %}
             chart_{{i}}.xAxis().ticks(5);
             chart_{{i}}.xAxis().tickFormat(function(d) {return d.toFixed(2);});
           {% endif %}
 
-          {% if filter.col_chart(i) == "pieChart" %}
+          {% if chart.type == "rowChart" %}
+              chart_{{i}}.elasticX(true);
+          {% endif %}
+
+          {% if chart.type == "pieChart" %}
             chart_{{i}}.radius({{filter.col_radius(i)}}).innerRadius({{filter.col_inner_radius(i)}});
           {% endif %}
 
@@ -59,7 +66,6 @@ require(["d3", "crossfilter", "dc"], function(d3, ignore, dc) {
         dim_index.top(10000000).forEach(function(v){index.push(v["_I"]);});
         var index_string = index.join(" ");
         var code = "__nb_update__('{{in_name}}', '{{out_name}}', '" + index_string + "')";
-        console.log(code);
         kernel.execute(code, {}, {silent:true});
         IPython.notification_area.widget_dict["kernel"].set_message("Data saved to {{out_name}}", 1000);
         return false;
@@ -71,26 +77,36 @@ require(["d3", "crossfilter", "dc"], function(d3, ignore, dc) {
         return false;
     });
 
+    $("#crossfilter-clear-{{filter.timestamp}}").click(function(){
+        {% for i, chart in filter.enumerate_charts() %}
+            chart_{{i}}.resetSvg();
+        {% endfor %}
+        $("#crossfilter-{{filter.timestamp}}").remove();
+        return false;
+    });
+
 {%- endmacro %}
 
 {% for css in css_urls %}
 <link rel="stylesheet" type="text/css" href="{{ css }}">
 {% endfor %}
 
+<div id="crossfilter-{{filter.timestamp}}">
 <div>
     <a href="#" id="crossfilter-reset-{{filter.timestamp}}">Reset All</a>
     <a href="#" id="crossfilter-update-{{filter.timestamp}}">Save as {{out_name}}</a>
+    <a href="#" id="crossfilter-clear-{{filter.timestamp}}">Clear</a>
 </div>
 
-{% for i, col in filter.itercolumns() %}
+{% for i, chart in filter.enumerate_charts() %}
 <div id="chart-{{i}}-{{filter.timestamp}}">
-    <strong>{{col}}</strong>
+    <strong>{{chart.title}}</strong>
     <span class="reset" style="display: none;">range: <span class="filter"></span></span>
     <a class="reset" href="#" style="display: none;">reset</a>
 <div class="clearfix"></div>
 </div>
 {% endfor %}
-
+</div>
 
 
 <script type="text/javascript">
